--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.14",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
